force-app/main/default/objects/Account/fields/Account_Manager_Rel_BA__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Rel_BA__c</fullName>
    <description>Stores Account Managers from relationship with BA</description>
    <label>Account Manager Rel. BA</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>