force-app/main/default/objects/Account/fields/Market_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Market_Segmentation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Segmentation</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4) OR 5</booleanFilter>
        <errorMessage>Please select a market segmentation having a &apos;Segmentation Level 1&apos; = true.</errorMessage>
        <filterItems>
            <field>Market_Segmentation__c.Business_Area__c</field>
            <operation>equals</operation>
            <value>G&amp;C</value>
        </filterItems>
        <filterItems>
            <field>$User.NewBusinessArea__c</field>
            <operation>equals</operation>
            <value>G&amp;C</value>
        </filterItems>
        <filterItems>
            <field>$User.NewBusinessArea__c</field>
            <operation>equals</operation>
            <value>HTS, PM AMERICAS, PM APAC, PM EMEA, RAC, TALC NA, Corporate</value>
        </filterItems>
        <filterItems>
            <field>Market_Segmentation__c.Business_Area__c</field>
            <operation>notEqual</operation>
            <value>G&amp;C</value>
        </filterItems>
        <filterItems>
            <field>$User.ByPassLookupCriteria__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Market_Segmentation__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>